syntax = "proto3";
import "KFDefineMessage.proto";
import "KFMidwareDefineMessage.proto";

package KFMsg;

enum MidwareServerProtocol
{	
	S2S_MIDWARE_SERVER_PROTOCOL_BEGIN = 0;			// pb3 0 开始

	// zone
	S2S_UPDATE_ZONE_TO_LOGIN_REQ 		= 20001;	// 更新小区到login服务器
	S2S_UPDATE_ZONE_TO_WORLD_REQ 		= 20002;	// 更新小区到world服务器
	S2S_DISCONNECT_ZONE_TO_WORLD_REQ 	= 20003;	// 断开小区到world服务器

	// login
	S2S_LOGIN_TO_LOGIN_REQ				= 20101;	// 登录请求到login服务器
	S2S_LOGIN_TO_GATE_ACK				= 20102;	// 登录回应道gate服务器
	S2S_LOGIN_TO_WORLD_REQ				= 20103;	// 登录请求到world服务器
	S2S_LOGIN_TO_LOGIN_ACK				= 20104;	// 登录回应到login服务器
	S2S_LOGIN_TO_GAME_REQ				= 20105;	// 登录请求到game服务器
	S2S_LOGOUT_TO_GAME_REQ				= 20106;	// 登出游戏到game服务器
	S2S_DISCONNECT_TO_GAME_REQ			= 20107;	// 断线到gate服务器
	S2S_ENTER_TO_GATE_ACK				= 20108;	// 进入游戏到gate服务器

	// world
	S2S_PLAYER_SYNC_TO_WORLD_REQ		= 20201;	// 同步在线人家
	S2S_PLAYER_ENTER_TO_WORLD_REQ 		= 20202;	// 游戏玩家进入游戏
	S2S_PLAYER_LEAVE_TO_WORLD_REQ 		= 20203;	// 游戏玩家离开游戏
	S2S_KICK_PLAYER_TO_GAME_REQ			= 20204;	// 踢人请求到game服务器
	S2S_KICK_PLAYER_TO_GATE_REQ			= 20205;	// 踢人请求到gate服务器

	// server
	S2S_BROADCAST_TO_GAME 				= 20301;	// 广播消息
	S2S_BROADCAST_TO_GATE				= 20302;	// 广播消息
	S2S_TRANSMIT_TO_PLAYER 				= 20303;	// 转发消息
	
	// data
	S2S_LOAD_PLAYER_TO_DATA_REQ			= 20401;	// 加载玩家数据
	S2S_LOAD_PLAYER_TO_GAME_ACK			= 20402;	// 加载玩家数据
	S2S_SAVE_PLAYER_TO_DATA_REQ			= 20403;	// 保存玩家数据
	S2S_QUERY_PLAYER_TO_DATA_REQ		= 20404;	// 查询玩家
	S2S_QUERY_PLAYER_TO_GAME_ACK		= 20405;	// 查询玩家
	S2S_SET_PLAYERNAME_TO_DATA_REQ 		= 20406;	// 设置玩家名字
	S2S_SET_PLAYERNAME_TO_GAME_ACK		= 20407;	// 设置玩家名字

	// mail
	S2S_NEW_PLAYER_MAIL_REQ 			= 20501;	// 新玩家登陆邮件服务
	S2S_QUERY_MAIL_REQ 					= 20502;	// 查询邮件
	S2S_QUERY_MAIL_ACK 					= 20503;	// 查询邮件
	S2S_ADD_MAIL_REQ 					= 20504;	// 添加邮件
	S2S_NOTICE_NEW_MAIL_REQ 			= 20505;	// 通知新邮件
	S2S_UPDATE_MAIL_STATUS_REQ 			= 20506;	// 设置邮件状态请求
	S2S_UPDATE_MAIL_STATUS_ACK 			= 20507;	// 设置邮件状态响应
	
	// rank
	S2S_UPDATE_RANK_DATA_REQ 			= 20601;	// 更新排行榜数据
	S2S_QUERY_RANK_LIST_REQ 			= 20602;	// 查询全服排行榜
	S2S_QUERY_FRIEND_RANK_LIST_REQ 		= 20603;	// 查询好友排行榜
	S2S_REFRESH_RANK_REQ				= 20604;	// 刷新排行榜
	S2S_REFRESH_RANK_ACK				= 20605;	// 刷新排行榜
	S2S_TELL_REFRESH_RANK				= 20606;	// 刷新排行榜

	// public
	S2S_UPDATE_DATA_TO_PUBLIC_REQ 		= 20701;	// 更新公共数据
	S2S_QUERY_BASIC_TO_PUBLIC_REQ 		= 20702;	// 查询玩家基础数据
	S2S_QUERY_BASIC_TO_GAME_ACK 		= 20703;	// 查询玩家基础数据
}

///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
message PBZoneData
{
	uint64 appid = 1;	// appid
	bytes ip = 2;		// ip
	uint32 port = 3;	// port
	uint32 count = 4;	// 当前在线人数
}

// 更新小区到login服务器
// S2S_UPDATE_ZONE_TO_LOGIN_REQ
message S2SUpdateZoneToLoginReq
{
	PBZoneData zonedata = 1;
}

// 更新小区到world服务器
// S2S_UPDATE_ZONE_TO_WORLD_REQ
message S2SUpdateZoneToWorldReq
{
	PBZoneData zonedata = 1;
}

// 断开gate
// S2S_DISCONNECT_ZONE_TO_WORLD_REQ
message S2SDisconnectZoneToWorldReq
{
	uint64 appid = 1;	// appid
}
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// 登录验证请求
// S2S_LOGIN_TO_LOGIN_REQ
message S2SLoginToLoginReq
{
	bytes ip = 1;			// 登录ip
	bytes token = 2;		// token
	uint64 accountid = 3;	// 账号id
	uint64 sessionid = 4;	// sessionid
}

// S2S_LOGIN_TO_GATE_ACK
message S2SLoginToGateAck
{
	uint32 result = 1;		// 结果
	uint64 accountid = 2;	// 账号id
	uint64 sessionid = 3;	// sessionid
	uint64 bantime = 4;		// 禁止游戏的时间
}

// 登录请求到world服务器
// S2S_LOGIN_TO_WORLD_REQ
message S2SLoginToWorldReq
{
	PBLoginData pblogin = 1;
}

// 登录失败到login服务器
// S2S_LOGIN_TO_LOGIN_ACK
message S2SLoginToLoginAck
{
	uint32 result = 1;		// 结果
	uint64 gateid = 2;		// 服务器id
	uint64 accountid = 3;	// 账号id
	uint64 sessionid = 4;	// sessionid
}

// 登录请求到game服务器
// S2S_LOGIN_TO_GAME_REQ
message S2SLoginToGameReq
{
	PBLoginData pblogin = 1;
}

// S2S_ENTER_TO_GATE_ACK
message S2SEnterToGateAck
{
	PBLoginData pblogin = 1;
	PBObject playerdata = 2;
	uint64 servertime = 3;
}

// 请求登出到game服务器
// S2S_LOGOUT_TO_GAME_REQ
message S2SLogoutToGameReq
{
	uint64 playerid = 1; 
}

// 玩家断线到game服务器
// S2S_DISCONNECT_TO_GAME_REQ
message S2SDisconnectToGameReq
{
	uint64 playerid = 1; 
}
/////////////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////////////
// 加载玩家数据
// S2S_LOAD_PLAYER_TO_DATA_REQ
message S2SLoadPlayerToDataReq
{
	PBLoginData pblogin = 1;	
}

// 加载游戏数据结果
// S2S_LOAD_PLAYER_TO_GAME_ACK
message S2SLoadPlayerToGameAck
{
	uint32 result = 1;
	PBLoginData pblogin = 2;
	PBObject playerdata = 3;	
}

// 保存玩家数据
// S2S_SAVE_PLAYER_TO_DATA_REQ
message S2SSavePlayerToDataReq
{
	uint64 id = 1;
	PBObject data = 3;
}

// 查询属性
// S2S_QUERY_PLAYER_TO_DATA_REQ
message S2SQueryPlayerToDataReq
{
	uint64 playerid = 1;
}

// 查询属性
// S2S_QUERY_PLAYER_TO_GAME_ACK
message S2SQueryPlayerToGameAck
{
	uint32 result = 1;
	PBObject playerdata = 2;
}

// S2S_SET_PLAYERNAME_TO_DATA_REQ
message S2SSetPlayerNameToDataReq
{
	uint64 playerid = 1;
	bytes oldname = 2;
	bytes newname = 3;
	uint64 itemuuid = 4;
}

// S2S_SET_PLAYERNAME_TO_GAME_ACK
message S2SSetPlayerNameToGameAck
{
	uint32 result = 1;
	uint64 playerid = 2;
	bytes name = 3;
	uint64 itemuuid = 4;
}
/////////////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////////////
// 查询角色id请求
// S2S_PLAYER_ENTER_TO_WORLD_REQ
message S2SPlayerEnterToWorldReq
{
	uint64 playerid = 1;		// 角色id	
	uint64 accountid = 2;		// 账号id
}

// S2S_PLAYER_LEAVE_WORLD_TO_REQ
message S2SPlayerLeaveToWorldReq
{
	uint64 playerid = 1;		// 角色id
	uint64 accountid = 2;		// 账号id
}

// 同步在线玩家
// S2S_PLAYER_SYNC_TO_WORLD_REQ
message S2SPlayerSyncToWorldReq
{
	repeated uint64 playerid = 1;
}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// 踢人请求到game服务器
// S2S_KICK_PLAYER_TO_GAME_REQ
message S2SKickPlayerToGameReq
{
	uint32 type = 1;		// 踢人类型
	uint64 playerid = 2;	// 角色id
}

// 踢人请求到gate服务器
// S2S_KICK_PLAYER_TO_GATE_REQ
message S2SKickPlayerToGateReq
{
	uint32 type = 1;		// 踢人类型
	uint64 playerid = 2;	// 角色id

}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// S2S_BROADCAST_TO_GAME
message S2SBroadcastToGame
{
	uint32 msgid = 1;			// 消息id
	bytes msgdata = 2;		// 消息内容
}

// S2S_BROADCAST_TO_GATE
message S2SBroadcastToGate
{
	uint32 msgid = 1;			// 消息id
	bytes msgdata = 2;		// 消息内容
}

// S2S_TRANSMIT_TO_PLAYER
message S2STransmitToPlayer
{
	uint64 playerid = 1;		// 玩家id
	uint32 msgid = 2;			// 消息id
	bytes msgdata = 3;		// 消息内容
}

////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// 邮件信息
message PBMail
{
	map<string, bytes> data = 1;
}

// 查询邮件请求
// S2S_QUERY_MAIL_REQ
message S2SQueryMailReq
{
	uint64 playerid = 1;		//  角色id
	uint32 zoneid = 2;			//  小区id
	uint64 maxid = 3;			//  最大的邮件id
}

// 查询邮件请求
// S2S_QUERY_MAIL_ACK
message S2SQueryMailAck
{
	uint64 playerid = 1;		// 角色id
	repeated PBMail mail = 2;	// 邮件信息
}

// 添加邮件
// S2S_ADD_MAIL_REQ
message S2SAddMailReq
{
	uint32 flag = 1;
	uint64 objectid = 2;		// id
	PBMail pbmail = 3;			// 邮件信息
}

// 通知有新邮件
// S2S_NOTICE_NEW_MAIL_REQ
message S2SNoticeNewMailReq
{
	uint64 playerid = 1;	// 角色id	
}

// 新玩家登陆邮件服务
// S2S_NEW_PLAYER_MAIL_REQ
message S2SNewPlayerMailReq
{
	uint64 playerid = 1;		// 玩家id
	uint32 zoneid = 2;			// 小区id
}

// 设置邮件状态请求
// S2S_UPDATE_MAIL_STATUS_REQ
message S2SUpdateMailStatusReq
{
	uint64 playerid = 1;
	uint64 id = 2;
	uint32 flag = 3;
	uint32 status = 4;
}

// 设置邮件状态响应
// S2S_UPDATE_MAIL_STATUS_ACK
message S2SUpdateMailStatusAck
{
	uint64 playerid = 1;
	uint64 id = 2;
	uint32 status = 3;
}

/////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////
// 更新排行榜数据
// S2S_UPDATE_RANK_DATA_REQ
message S2SUpdateRankDataReq
{
	uint64 playerid = 1;		// 玩家id
	uint32 rankid = 2;			// 榜单id
	uint32 zoneid = 3;			// 小区id
	PBRankData pbrankdata = 4;	// 排行榜数据
}

// 查询全服排行榜
// S2S_QUERY_RANK_LIST_REQ
message S2SQueryRankListReq
{
	uint32 rankid = 1;			// 排行榜id
	uint32 zoneid = 2;			// 小区id
}

// 查询好友排行榜
// S2S_QUERY_FRIEND_RANK_LIST_REQ
message S2SQueryFriendRankListReq
{
	uint32 rankid = 1;				// 榜单类型
	repeated uint64 friendid = 2;	// 待查询的玩家好友id
}

// 刷新排行榜请求
// S2S_REFRESH_RANK_REQ
message S2SRefreshRankReq
{
	uint32 rankid = 1;				// 榜单类型
}

// 刷新排行榜完成
// S2S_REFRESH_RANK_ACK
message S2SRefreshRankAck
{
	uint32 rankid = 1;				// 榜单类型
}

// S2S_TELL_REFRESH_RANK
message S2STellRefreshRank
{
	uint32 rankid = 1;				// 榜单类型
}

//////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////
// 更新公共数据
// S2S_UPDATE_DATA_TO_PUBLIC_REQ
message S2SUpdateDataToPublicReq
{
	map<string, bytes> pbdata = 1;	// 属性
}

// 查询基础数据
// S2S_QUERY_BASIC_TO_PUBLIC_REQ
message S2SQueryBasicToPublicReq
{
	bytes name = 1;
}

// 查询基础数据
// S2S_QUERY_BASIC_TO_GAME_ACK
message S2SQueryBasicToGameAck
{
	bytes name = 1;
	uint32 result = 2;
	map<string, bytes> pbdata = 3;	// 属性
}
